[BugFix] Allow the security manager on JDK 18-23